# opensimlab-numerical-algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: newton_example.cpp
include/opensimlab/solvers/root_finding/: newton.hpp
src/solvers/root_finding/: newton.cpp
